force-app/main/default/objects/AVO_Meter_Transaction__c/AVO_Meter_Transaction__c.object-meta.xml
<CustomObject>
    <label>Meter Transaction</label>
    <nameField>
        <label>Meter Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meter Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>