force-app/main/default/objects/AVO_Meter_Transaction__c/fields/Accessory_Type__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Type__c</fullName>
    <label>Accessory Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery, AG90</fullName>
            </value>
            <value>
                <fullName>Battery, AG2000</fullName>
            </value>
            <value>
                <fullName>Battery, AG3000</fullName>
            </value>
            <value>
                <fullName>Battery, McMag3000</fullName>
            </value>
            <value>
                <fullName>Battery, SignalFire</fullName>
            </value>
            <value>
                <fullName>FS106-1</fullName>
            </value>
            <value>
                <fullName>FS106-2</fullName>
            </value>
            <value>
                <fullName>FS106-3</fullName>
            </value>
            <value>
                <fullName>FS106-4</fullName>
            </value>
            <value>
                <fullName>FS108-1</fullName>
            </value>
            <value>
                <fullName>FS108-2</fullName>
            </value>
            <value>
                <fullName>FS108-3</fullName>
            </value>
            <value>
                <fullName>FS108-4</fullName>
            </value>
            <value>
                <fullName>FS110</fullName>
            </value>
            <value>
                <fullName>FS112</fullName>
            </value>
            <value>
                <fullName>Meter Cap, 4&quot;</fullName>
            </value>
            <value>
                <fullName>Meter Cap, 6&quot;</fullName>
            </value>
            <value>
                <fullName>Meter Cap, 8&quot;</fullName>
            </value>
            <value>
                <fullName>SignalFire Telemetry Unit</fullName>
            </value>
            <value>
                <fullName>Vane Set, 4&quot;</fullName>
            </value>
            <value>
                <fullName>Vane Set, 6&quot;</fullName>
            </value>
            <value>
                <fullName>Vane Set, 8&quot;</fullName>
            </value>
            <value>
                <fullName>Vane Set, 10&quot;</fullName>
            </value>
            <value>
                <fullName>Vane Set, 12&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>