force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Allocated_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Allocated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meter_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>