force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Allocated_To__c.field-meta.xml
<CustomField>
    <fullName>AVO_Allocated_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meter_Transaction Allocated To</relationshipLabel>
    <relationshipName>Meter_Transaction_Allocated_To</relationshipName>
    <type>Lookup</type>
</CustomField>