force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Allocation_Type__c</fullName>
    <label>Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>