force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Applicant__c.field-meta.xml
<CustomField>
    <fullName>AVO_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meter_Transaction Applicant</relationshipLabel>
    <relationshipName>Meter_Transaction_Applicant</relationshipName>
    <type>Lookup</type>
</CustomField>