force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>notEqual</operation>
            <value>Revision</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Meter_Transaction Application ID</relationshipLabel>
    <relationshipName>Meter_Transaction_Application_ID</relationshipName>
    <type>Lookup</type>
</CustomField>