force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Assigned_By__c</fullName>
    <label>Assigned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>