force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Batch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Transactions (Batch ID)</relationshipLabel>
    <relationshipName>Meter_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>