force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Batch_Type__c</fullName>
    <label>Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Batch Meter Entry</fullName>
            </value>
            <value>
                <fullName>Batch Meter Reading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>