force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Battery_Life_Length_Years__c.field-meta.xml
<CustomField>
    <fullName>AVO_Battery_Life_Length_Years__c</fullName>
    <label>Battery Life Length (Years)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>