force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Battery_Replacement_Needed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Battery_Replacement_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Replacement Needed</label>
    <type>Checkbox</type>
</CustomField>