force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Calculated_Usage__c.field-meta.xml
<CustomField>
    <fullName>AVO_Calculated_Usage__c</fullName>
    <label>Calculated Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>