force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Change_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Change_Status__c</fullName>
    <label>Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved and Active On Site</fullName>
                <default>true</default>
                <label>Approved and Active On Site</label>
            </value>
            <value>
                <fullName>Active On Site</fullName>
                <isActive>false</isActive>
                <label>Active On Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>