force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Comment_Undo_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comment_Undo_Removal_Date__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>