force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_County__c.field-meta.xml
<CustomField>
    <fullName>AVO_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>AVO_County__c</referenceTo>
    <relationshipLabel>Meter Transactions</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>