force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Crop_Type__c</fullName>
    <label>Crop Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blueberries</fullName>
            </value>
            <value>
                <fullName>Corn</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Golf Course</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Hay</fullName>
            </value>
            <value>
                <fullName>Non-Golf Sport</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>Orchard</fullName>
            </value>
            <value>
                <fullName>Pasture</fullName>
            </value>
            <value>
                <fullName>Peach</fullName>
            </value>
            <value>
                <fullName>Peanut</fullName>
            </value>
            <value>
                <fullName>Pecans</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Recreation</fullName>
            </value>
            <value>
                <fullName>Row Crop</fullName>
            </value>
            <value>
                <fullName>Sod</fullName>
            </value>
            <value>
                <fullName>Soybean</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
            <value>
                <fullName>Turf Grass</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vegetable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>