force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_CSV_Read__c.field-meta.xml
<CustomField>
    <fullName>AVO_CSV_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSV Read</label>
    <type>Checkbox</type>
</CustomField>