force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Current_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>AVO_Current_Meter_Reading__c</fullName>
    <label>Current Meter Reading</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>