force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_DataFrom__c.field-meta.xml
<CustomField>
    <fullName>AVO_DataFrom__c</fullName>
    <description>Identifies the specific conversion step used to generate the record. This will be important for any conversion where one source record is added as two (or more) target records</description>
    <label>AVO DataFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>