force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Date_Allocated__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Allocated__c</fullName>
    <label>Date Allocated</label>
    <type>Date</type>
</CustomField>