force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Assigned__c</fullName>
    <label>Date Assigned</label>
    <type>Date</type>
</CustomField>