force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Signed__c</fullName>
    <label>Date Signed</label>
    <type>Date</type>
</CustomField>