force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Date_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Uploaded__c</fullName>
    <label>Date Uploaded</label>
    <type>Date</type>
</CustomField>