force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Details__c.field-meta.xml
<CustomField>
    <fullName>AVO_Details__c</fullName>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>