force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Digital_Photo_Attached__c.field-meta.xml
<CustomField>
    <fullName>AVO_Digital_Photo_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Photo Attached</label>
    <type>Checkbox</type>
</CustomField>