force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Disposal_Approved__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposal Approved</label>
    <type>Checkbox</type>
</CustomField>