force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Disposal_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposal Approved By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meter_Transaction Disposal Approved By</relationshipLabel>
    <relationshipName>Meter_Transaction_Disposal_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>