force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Disposal_Method__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Method__c</fullName>
    <label>Disposal Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>