force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Disposed_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meter_Transaction Disposed By</relationshipLabel>
    <relationshipName>Meter_Transaction_Disposed_By</relationshipName>
    <type>Lookup</type>
</CustomField>