force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Disposed_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposed_Date__c</fullName>
    <label>Disposed Date</label>
    <type>Date</type>
</CustomField>