force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Flow_Straightener_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Flow_Straightener_Status__c</fullName>
    <label>Flow Straightener Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flow Straightener Installed</fullName>
            </value>
            <value>
                <fullName>Flow Straightener Not Required</fullName>
            </value>
            <value>
                <fullName>Flow Straightener Required and Not Installed</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>