force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Initial_Maintenance_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Initial_Maintenance_Comment__c</fullName>
    <label>Initial Maintenance Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>