force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installation_Date__c</fullName>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>