force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installation_Status__c</fullName>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Installation Review AG</fullName>
            </value>
            <value>
                <fullName>GIS Review</fullName>
            </value>
            <value>
                <fullName>Installation Review</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>