force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Installation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installation_Type__c</fullName>
    <label>Installation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Battery Replacement</fullName>
            </value>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>On Site Repair</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Retrieval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>