force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Installed_Per_Specification__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installed_Per_Specification__c</fullName>
    <label>Installed Per Specification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>