force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Installer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installer_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Company Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meter Transactions (Installer Company Name)</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>