force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Dead On Site</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Disposal Approved</fullName>
            </value>
            <value>
                <fullName>Disposed Meter - Dead/Scrapped</fullName>
            </value>
            <value>
                <fullName>Double Metered</fullName>
            </value>
            <value>
                <fullName>Duplicate Installation</fullName>
            </value>
            <value>
                <fullName>Installed Meter</fullName>
            </value>
            <value>
                <fullName>Meter Retrieved - Pending Disposal</fullName>
            </value>
            <value>
                <fullName>Meter Retrieved - To Be Reused</fullName>
            </value>
            <value>
                <fullName>Meter Update</fullName>
            </value>
            <value>
                <fullName>Missing Meter</fullName>
            </value>
            <value>
                <fullName>Pending Disposal</fullName>
            </value>
            <value>
                <fullName>Pending Disposal Coliation</fullName>
            </value>
            <value>
                <fullName>Ready in Warehouse</fullName>
            </value>
            <value>
                <fullName>Require Retrieval</fullName>
            </value>
            <value>
                <fullName>Undocumented Meter</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>