force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Irrigation_Season__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Season__c</fullName>
    <label>Irrigation Season</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>