force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Irrigation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Type__c</fullName>
    <label>Irrigation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CENTER PIVOT</fullName>
            </value>
            <value>
                <fullName>CENTER PIVOT AND DRIP</fullName>
            </value>
            <value>
                <fullName>CENTER PIVOT AND TRAVELER</fullName>
            </value>
            <value>
                <fullName>DRIP</fullName>
            </value>
            <value>
                <fullName>DRIP AND SOLID SET SPRINKLER</fullName>
            </value>
            <value>
                <fullName>DRIP AND TRAVELER</fullName>
            </value>
            <value>
                <fullName>DUMP WELL</fullName>
            </value>
            <value>
                <fullName>NON-IRRIGATION</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SOLID SET SPRINKLER</fullName>
            </value>
            <value>
                <fullName>TRAVELER</fullName>
            </value>
            <value>
                <fullName>TRAVELER AND SOLID SET SPRINKLER</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>