force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Leading_Zeros__c.field-meta.xml
<CustomField>
    <fullName>AVO_Leading_Zeros__c</fullName>
    <label>Leading Zeros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>