force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Left_Meter_At_Site__c.field-meta.xml
<CustomField>
    <fullName>AVO_Left_Meter_At_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Meter At Site</label>
    <type>Checkbox</type>
</CustomField>