force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Maintenance_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maintenance_Comment__c</fullName>
    <label>Maintenance Comment</label>
    <type>TextArea</type>
</CustomField>