force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maintenance_Date__c</fullName>
    <label>Maintenance Date</label>
    <type>Date</type>
</CustomField>