force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Maintenance_Source__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maintenance_Source__c</fullName>
    <label>Maintenance Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Meter Installation</fullName>
            </value>
            <value>
                <fullName>Meter Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>