force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maintenance_Status__c</fullName>
    <label>Maintenance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending Meter Allocation</fullName>
            </value>
            <value>
                <fullName>Pending Specialist Allocation</fullName>
                <label>Pending Internal or External Allocation</label>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Site Visit Only</fullName>
                <label>Site Needs Revisit</label>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Maintenance On Hold</fullName>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>