force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Maintenance_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Maintenance_Type__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Battery Replacement</fullName>
            </value>
            <value>
                <fullName>Meter Replacement</fullName>
            </value>
            <value>
                <fullName>New Installation Maintenance</fullName>
            </value>
            <value>
                <fullName>On Site Repair</fullName>
            </value>
            <value>
                <fullName>Retrieval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>